// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShellIcon > matches active snapshot for binah 1`] = `
<svg
  aria-label="Shell of Understanding — Despair (active)"
  class=""
  data-sefirah="binah"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Understanding — Despair (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#1a1a1a"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#1a1a1a"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#1a1a1a"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ב
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for chesed 1`] = `
<svg
  aria-label="Shell of Mercy — Hoarding (active)"
  class=""
  data-sefirah="chesed"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Mercy — Hoarding (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#4169e1"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#4169e1"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#4169e1"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ס
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for chokmah 1`] = `
<svg
  aria-label="Shell of Wisdom — Paralysis (active)"
  class=""
  data-sefirah="chokmah"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Wisdom — Paralysis (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#c0c0c0"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#c0c0c0"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#c0c0c0"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ח
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for gevurah 1`] = `
<svg
  aria-label="Shell of Severity — Cruelty (active)"
  class=""
  data-sefirah="gevurah"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Severity — Cruelty (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#dc143c"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#dc143c"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#dc143c"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ג
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for hod 1`] = `
<svg
  aria-label="Shell of Splendor — Deception (active)"
  class=""
  data-sefirah="hod"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Splendor — Deception (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#ff8c00"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#ff8c00"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#ff8c00"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ה
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for kether 1`] = `
<svg
  aria-label="Shell of Crown — Fragmentation (active)"
  class=""
  data-sefirah="kether"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Crown — Fragmentation (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#ffffff"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#ffffff"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#ffffff"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    כ
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for malkuth 1`] = `
<svg
  aria-label="Shell of Kingdom — Inertia (active)"
  class=""
  data-sefirah="malkuth"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Kingdom — Inertia (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#8b4513"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#8b4513"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#8b4513"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    מ
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for netzach 1`] = `
<svg
  aria-label="Shell of Victory — Obsession (active)"
  class=""
  data-sefirah="netzach"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Victory — Obsession (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#228b22"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#228b22"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#228b22"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    נ
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for tiferet 1`] = `
<svg
  aria-label="Shell of Beauty — Vanity (active)"
  class=""
  data-sefirah="tiferet"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Beauty — Vanity (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#ffd700"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#ffd700"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#ffd700"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    ת
  </text>
</svg>
`;

exports[`ShellIcon > matches active snapshot for yesod 1`] = `
<svg
  aria-label="Shell of Foundation — Illusion (active)"
  class=""
  data-sefirah="yesod"
  data-shell-state="active"
  data-status="active"
  data-token="shell"
  role="img"
  viewBox="0 0 28 28"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Shell of Foundation — Illusion (active)
  </title>
  <g
    opacity="1"
  >
    <polygon
      fill="transparent"
      points="14.00,1.00 16.59,4.34 20.50,2.74 21.07,6.93 25.26,7.50 23.66,11.41 27.00,14.00 23.66,16.59 25.26,20.50 21.07,21.07 20.50,25.26 16.59,23.66 14.00,27.00 11.41,23.66 7.50,25.26 6.93,21.07 2.74,20.50 4.34,16.59 1.00,14.00 4.34,11.41 2.74,7.50 6.93,6.93 7.50,2.74 11.41,4.34"
      stroke="#9370db"
      stroke-linejoin="round"
      stroke-width="1.1"
    />
    <circle
      cx="14"
      cy="14"
      fill="transparent"
      r="7"
      stroke="#9370db"
      stroke-width="0.5"
    />
  </g>
  <text
    fill="#9370db"
    fill-opacity="0.95"
    font-family="var(--font-hebrew), serif"
    font-size="13"
    lang="he"
    stroke="none"
    stroke-opacity="0.95"
    stroke-width="0"
    style="direction: rtl; unicode-bidi: isolate;"
    text-anchor="middle"
    x="14"
    y="19"
  >
    י
  </text>
</svg>
`;
